--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "8",
+    "next": "15.1.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "next": "15.1.4"
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
+    "eslint": "^8",
+    "eslint-config-next": "15.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.1.4"
+    "typescript": "^5"
   },
   "pnpm": {
     "overrides": {
