--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sentry/nextjs": "8",
-    "next": "15.1.4",
+    "@sentry/nextjs": "9.3.0",
+    "next": "15.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3",
-    "eslint": "^8",
-    "eslint-config-next": "15.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@tailwindcss/postcss": "^4.0.9",
+    "@types/node": "^22.13.8",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "15.2.0",
+    "tailwindcss": "^4.0.9",
     "typescript": "^5"
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "19.0.7",
-      "@types/react-dom": "19.0.3"
+      "@types/react": "19.0.10",
+      "@types/react-dom": "19.0.4"
     }
   }
 }
