--- a/.github/workflows/assigne-me.yml
+++ b/.github/workflows/assigne-me.yml
@@ -1,20 +1,14 @@
 name: '🙋‍♂️ Assign me'
 
 on:
-  pull_request:
+  pull_request_target:
     types: [opened, synchronize, reopened]
 
 jobs:
-  set_assignee:
+  assign-author:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/github-script@v7
+      - uses: toshimaru/auto-author-assign@v2.1.1
         if: github.actor != 'dependabot[bot]'
         with:
-          script: |
-            github.rest.issues.addAssignees({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              assignees: [context.actor],
-            })
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
