--- a/.github/workflows/sync-develop.yml
+++ b/.github/workflows/sync-develop.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Merge master into develop
         id: merge
         run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.name "Actions Bot"
+          git config --global user.email "actions@github.com"
           git checkout develop
           git pull origin develop
 
